--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "portfolio",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://Amalgopakumar.github.io/portfolio",
   "dependencies": {
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "bootstrap": "^5.3.2",
-    "react-bootstrap": "^2.9.1",
-    "aos": "^2.3.4",
     "react-typed": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
